fix overflow home

--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,7 @@ $primary: #1976d2;
         height: 100vh;
         width: 100%;
         position: relative;
+        overflow: hidden;
         .mobile {
           visibility: hidden;
           position: absolute;
